hphp/test/slow/dict/init-parse-error3.php.expectf
Fatal error: Key of collection element cannot be marked as reference in %s/test/slow/dict/init-parse-error3.php on line 4